# carbon-gtk3

./: CMakeLists.txt  README  config.h.cmake
demo/: CMakeLists.txt  carbonbuttondemowidget.cpp  carbonbuttondemowidget.h  carbondemodialog.cpp  carbondemodialog.h  carbondemowidget.cpp  carbondemowidget.h  carbonframedemowidget.cpp  carbonframedemowidget.h  carbongtkdeco_main.cpp  carbongtkdemo_main.cpp  carboninfowidget.cpp  carboninfowidget.h  carboninputdemowidget.cpp  carboninputdemowidget.h  carbonlistdemowidget.cpp  carbonlistdemowidget.h  carbonsignal.cpp  carbonsignal.h  carbonsignalhandler.cpp  carbonsignalhandler.h  carbonsliderdemowidget.cpp  carbonsliderdemowidget.h  carbontabdemowidget.cpp  carbontabdemowidget.h  carbontimer.cpp  carbonversion.cpp  carbonversion.h
rc/: CMakeLists.txt  gtk.css  kdeglobals  settings.ini
src/: CMakeLists.txt  carbon.h  carbonanimationdata.h  carbonanimationmodes.h  carbonapplicationname.cpp  carbonapplicationname.h  carbonargbhelper.cpp  carbonargbhelper.h  carboncache.h  carboncachekey.h  carboncairocontext.cpp  carboncairocontext.h  carboncairopattern.h  carboncairoregion.h  carboncairosurface.h  carboncairosurfacecache.h  carboncairoutils.cpp  carboncairoutils.h  carboncoloreffect.cpp  carboncoloreffect.h  carboncolorutils.cpp  carboncolorutils.h  carbondefines.h  carbonflags.h  carbonfontinfo.cpp  carbonfontinfo.h  carbongeometry.h  carbongtkcellinfo.cpp  carbongtkcellinfo.h  carbongtkcss.cpp  carbongtkcss.h  carbongtkdefines.h  carbongtkgap.h  carbongtkicons.cpp  carbongtkicons.h  carbongtktypenames.cpp  carbongtktypenames.h  carbongtkutils.cpp  carbongtkutils.h  carbonloghandler.cpp  (+48 more)
src/animations/: carbonanimationengine.h  carbonanimations.cpp  carbonanimations.h  carbonarrowstatedata.cpp  carbonarrowstatedata.h  carbonarrowstateengine.h  carbonbackgroundhintengine.cpp  carbonbackgroundhintengine.h  carbonbaseengine.cpp  carbonbaseengine.h  carboncomboboxdata.cpp  carboncomboboxdata.h  carboncomboboxengine.h  carboncomboboxentrydata.cpp  carboncomboboxentrydata.h  carboncomboboxentryengine.h  carbondatamap.h  carbondialogengine.cpp  carbondialogengine.h  carbonfollowmousedata.cpp  carbonfollowmousedata.h  carbongenericengine.h  carbongroupboxengine.h  carbongroupboxlabeldata.h  carbongroupboxlabelengine.h  carbonhook.cpp  carbonhook.h  carbonhoverdata.cpp  carbonhoverdata.h  carbonhoverengine.h  carboninnershadowdata.cpp  carboninnershadowdata.h  carboninnershadowengine.h  carbonmainwindowdata.cpp  carbonmainwindowdata.h  carbonmainwindowengine.h  carbonmenubarstatedata.cpp  carbonmenubarstatedata.h  carbonmenubarstateengine.h  carbonmenuitemdata.cpp  (+49 more)
src/debug/: carbonwidgetexplorer.cpp  carbonwidgetexplorer.h
